--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
 theme: jekyll-theme-minimal
+
+gems:
+  - jekyll-seo-tag
+
+description:
+  How to code using Chinese language, including programming language support, IDE support, and demo projects. 如何用中文编写代码, 包括编程语言支持, 开发环境支持, 与示例项目.
