--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,9 @@ theme: jekyll-theme-minimal
 
 gems:
   - jekyll-seo-tag
+
+title: Program in Chinese
+email: fromwheretowhere.service@gmail.com
+description: > # this means to ignore newlines until "baseurl:"
+  How to code using Chinese language, including programming language support, IDE support, and demo projects.
+  如何用中文编写代码, 包括编程语言支持, 开发环境支持, 与示例项目.
