https://jeremenichelli.github.io/2015/07/building-blog-jekyll-creating-layouts/

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,7 @@ theme: jekyll-theme-minimal
 
 gems:
   - jekyll-seo-tag
+
+description: > # this means to ignore newlines until "baseurl:"
+  How to code using Chinese language, including programming language support, IDE support, and demo projects.
+  如何用中文编写代码, 包括编程语言支持, 开发环境支持, 与示例项目.
